# email-triage-env

./: .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: data.py  environment.py  graders.py  models.py  server.py
server/: app.py
