[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "OpenEnv-compatible RL environment for email triage"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "scipy",
    "requests",
    "numpy",
    "python-multipart",
]

[tool.openenv]
name = "email-triage-env"
version = "1.0.0"
tasks = ["label", "prioritize", "reply"]